--- a/shopTest/pom.xml
+++ b/shopTest/pom.xml
@@ -67,7 +67,23 @@
       <version>2.8.2</version>
     </dependency>
 
+    <!--guava缓存-->
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>22.0</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
+    <dependency>
+      <groupId>redis.clients</groupId>
+      <artifactId>jedis</artifactId>
+      <version>2.8.0</version>
+    </dependency>
+
+
   </dependencies>
+
 
 
 
