--- a/shopTest/pom.xml
+++ b/shopTest/pom.xml
@@ -140,6 +140,13 @@
       <version>22.0</version>
     </dependency>
 
+    <!--joda-time-->
+    <dependency>
+      <groupId>joda-time</groupId>
+      <artifactId>joda-time</artifactId>
+      <version>2.3</version>
+    </dependency>
+
     <!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
     <dependency>
       <groupId>redis.clients</groupId>
